--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -935,9 +935,9 @@ main {
 .select-item button:hover { --eerie-black-2: hsl(240, 2%, 20%); }
 
 .project-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 30px;
+  display: flex;
+  flex-wrap: wrap; /* Creates 2 equal-width columns */
+  gap: 18%;
   margin-bottom: 10px;
 }
 
@@ -953,15 +953,15 @@ main {
   100% { transform: scale(1); }
 }
 
-.project-item > a { width: 100%; }
+.project-item > a { width: 150%; height: 300px;}
 
 .project-img {
   position: relative;
-  width: 100%;
-  height: 200px;
+  width: 300px;
+  height: 250px;
   border-radius: 16px;
   overflow: hidden;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .project-img::before {
@@ -1004,7 +1004,7 @@ main {
 
 .project-img img {
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
   transition: var(--transition-1);
 }
